# geometra

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/geometra/: __init__.py  config.py  main.py
backend/geometra/agents/: __init__.py  agent_01_input_processing.py  agent_02_drawing_understanding.py  agent_03_ocr_annotation.py  agent_04_feature_recognition.py  agent_05_engineering_reasoning.py  agent_06_cad_generation.py  agent_07_validation.py  agent_08_3d_to_2d.py  base.py
backend/geometra/agents/agent_06/: __init__.py  agent.py  cadquery_gen.py  openscad_gen.py
backend/geometra/api/: routes.py  schemas.py
backend/geometra/core/: orchestrator.py  task_queue.py
backend/geometra/models/: db.py
backend/tests/: conftest.py  test_agent_01_input_processing.py  test_agent_02_drawing_understanding.py  test_agent_03_ocr_annotation.py  test_agent_04_feature_recognition.py  test_agent_05_engineering_reasoning.py  test_agent_06_cad_generation.py  test_benchmark_pipeline.py  test_integration_pipeline.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FileUpload.tsx  Viewer3D.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: index.ts
scripts/: run_backend.ps1  run_backend.sh  run_frontend.ps1  run_frontend.sh  setup.ps1  setup.sh
