[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometra"
version = "0.1.0"
description = "AI-Powered Bidirectional Engineering Drawing and CAD Reconstruction Platform"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Geometra" },
]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Task queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Database
    "motor>=3.4.0",
    "pymongo>=4.6.0",

    # Computer Vision
    "opencv-python>=4.9.0",
    "scikit-image>=0.22.0",
    "Pillow>=10.2.0",
    "pdfplumber>=0.10.0",
    "ezdxf>=1.3.0",

    # OCR
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",

    # Machine Learning
    "torch>=2.2.0",
    "ultralytics>=8.1.0",

    # CAD Engine
    "cadquery>=2.4.0",

    # 3D Processing
    "trimesh>=4.1.0",
    "numpy>=1.26.0",

    # Graph Processing
    "networkx>=3.2.0",

    # Rule Engine
    "experta>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["geometra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
